--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
 <h1>Question#show</h1>
-<h2><%= @question.category.name %></h2>:
-<h2><%= @question.title %></h2>
-<h3><%= @question.description %></h3>
+<h4>Category: <%= @question.category.name %></h4>
+<h4>Question: <%= @question.title %></h4>
+<h4><%= @question.description %></h4>
