Add edit in questions controller

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Ask a new question</h1>
+<h1>Edit this question</h1>
 
 <%= form_for(@question) do |f|%>
     <%= f.label :title%> <br/>
@@ -16,4 +16,3 @@
     <%= f.submit %>
   
 <% end %>
-
