--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,3 +2,6 @@
 <h4>Category: <%= @question.category.name %></h4>
 <h4>Question: <%= @question.title %></h4>
 <h4><%= @question.description %></h4>
+
+<%= link_to "Edit Question", edit_question_path(@question) %>
+
