--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,1 +1,12 @@
 <h1>Categories#index</h1>
+
+<h4>
+<ul>
+<% @categories.each do |c| %>
+    
+    <li><%= link_to c.name, category_path(c) %></li>
+
+<% end %> 
+</ul>
+</h4>
+
