--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,18 +1,3 @@
 <h1>Edit this question</h1>
 
-<%= form_for(@question) do |f|%>
-    <%= f.label :title%> <br/>
-    <%= f.text_field :title%> <br/>
-  
-    <%= f.label :description%> <br/>
-    <%= f.text_area :description %> <br/>
-  
-    <%= f.label :category_id, "Category"%>
-    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true%>
-     
-    <br/>
-    <br/>
-  
-    <%= f.submit %>
-  
-<% end %>
+<%= render 'form' %>
