Add Answer model

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,7 +6,7 @@
         <%= q.category.name %>
         <ul>
         <% q.category.questions.each do |q| %>
-            <li><%= link_to q.title, question_path(q) %> by <%= q.user.username %> </li>
+            <li><%= link_to q.title, question_path(q) %> by <%= q.user.username %> <%= link_to "Help Answer", question_answers_path(q) %> </li>
         <% end %>
         </ul>
     <% end %>
