--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <%= link_to "Log Out", logout_path, method: :delete %>
       <%= link_to "All Questions", questions_path, class: 'navlink' %>
       <%= link_to "All Categories", categories_path, class: 'navlink' %>
- 
+      <p>Welcome, <%= current_user.username %>! </p>
 
       </nav>
 
