--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,26 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.answer {
+	border-bottom: 1px solid #ec6767;
+	padding-top: 15px;
+	padding-bottom: 15px;
+
+	.answer-content {
+		font-size: 1.25em;
+	}	
+
+	.answer-posted-by {
+		color: #eee;
+		font-size: 0.8em;
+	}
+
+	.questions {
+		margin-top: 15px;
+		a {
+			color: #FFF;
+			margin-right: 15px;
+		}
+	}
+}
