--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,10 +1,12 @@
-<h1>Question#show</h1>
- 
+<!--<h1>Question#show</h1> -->
+<h5> <%= @question.user.username %> asked <%= time_ago_in_words(@question.created_at) %> ago </h5>
+
 <h4>Category: <%= @question.category.name %></h4>
-<h4>Question: <%= @question.title %> by <%= @question.user.username %></h4>
+
+<h4>Question: <%= @question.title %> </h4>
 <h4>Description: <%= @question.description %></h4>
 
-<p><%= render 'answers/comments' %></p>
+<%= render 'answers/comments' %>
 
 
 <%= render 'answers/form' %>
