--- a/app/views/answers/_comments.html.erb
+++ b/app/views/answers/_comments.html.erb
@@ -1,13 +1,16 @@
+<% if @question.answers.any? %>
+    <h4>Answers:</h4>
  
-<h4>Answers:</h4>
- 
-  <% @question.answers.each do |a| %> 
-    <p> <%= link_to a.comment, question_answer_path(a.question, a) %> </p>
-    <p> By: <%= a.user.username %> <%= time_ago_in_words(a.created_at) %> ago </p>
-    <%= link_to "Delete Answer", question_answer_path(@question, a), method: :delete, data: { confirm: "Are you sure?" } %>
+    <% @question.answers.each do |a| %> 
+        <p> <%= link_to a.comment, question_answer_path(a.question, a) %> </p>
+        <p> By: <%= a.user.username %> <%= time_ago_in_words(a.created_at) %> ago </p>
+         <% if a.user_id == current_user.id %>
+            <%= link_to "Edit Answer", edit_question_answer_path(@question, a) %>
+            <%= link_to "Delete Answer", question_answer_path(@question, a), method: :delete, data: { confirm: "Are you sure?" } %>
+        <% end %>
+    <% end %>
+
+  <% else %>
+    <h4>No answers yet.</h4>
 
   <% end %>
-
-
- 
-</div>
