--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,5 +13,7 @@
 
 <% if @question.user_id == current_user.id %>
     <%= link_to "Edit Question", edit_question_path(@question) %>
+    <%= link_to "Delete Question", question_path(@question), method: :delete, data: { confirm: "Are you sure?" } %>
+ 
 <% end %>
 
