--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,37 +11,36 @@
   </head>
 
   <body>
-    <% if logged_in? %>
 
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="container">
 
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Programming Forum</a>
         </div>
-        
-        <ul class = "nav navbar-nav navbar-right">
-          <li><%= link_to "All Questions", questions_path, class: 'navlink' %> </li>
-          <li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li>
-          <li><%= link_to "Log Out", logout_path, method: :delete, class: 'navlink' %> </li>
-        </ul>
 
-         
+        <% if logged_in? %>
+          <ul class = "nav navbar-nav navbar-right">
+            <li><%= link_to "All Questions", questions_path, class: 'navlink' %> </li>
+            <li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li>
+            <li><%= link_to "Log Out", logout_path, method: :delete, class: 'navlink' %> </li>
+          </ul>
+        <% end %>
+
 
       </div>
       
- 
     </nav>
 
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: "alert alert-info" %>
       <% end %>
 
-    <% end %>
 
  
 
     <%= yield %>
+
   </body>
 </html>
 
