--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,20 +1,29 @@
 <div class="col-md-10 col-md-offset-1">
-<h1>Questions</h1>
+    <h2>Questions</h2>
 
-<% if @questions %>
-    <% @categories.each do |c| %>
-        <%= c.name %> 
-        <ul>
-        <% c.questions.order('updated_at DESC').each do |q| %>
-                <li><%= link_to q.title, question_path(q) %> by <%= q.user.username %>  </li>     
-        <% end %>
-        </ul>
+    <% if @questions %>
+        <% @categories.each do |c| %>
+            <%= c.name %> 
+            <ul>
+                <% if c.questions.any? %>
+                    <% c.questions.order('updated_at DESC').each do |q| %>
+                        <li><%= link_to q.title, question_path(q) %> by <%= q.user.username %>  </li>  
+                    <% end %>
+
+                <% else %> 
+                    No questions yet.
+                <% end %>
+            </ul>
+        <% end %> 
     <% end %>
-<% end %>
-
  
 
- <%= link_to 'Ask a Question', new_question_path %>
+ 
+    <div class="btn btn-info btn-xs">
+        <%= link_to 'Ask a Question', new_question_path, class: "btn" %>
+    </div>
+
+ 
 
 </div>
 
