--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,16 +1,23 @@
+ 
 <%= form_for(@question) do |f|%>
-    <%= f.label :category_id, "Category"%> <br/>
-    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true%> <br/>
-  
-    <%= f.label :title%> <br/>
-    <%= f.text_field :title%> <br/>
-  
-    <%= f.label :description%> <br/>
-    <%= f.text_area :description %> <br/>
-      
+    <div class="form-group"
+        <%= f.label :category_id, "Category"%> <br/>
+        <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true, class: "form-control"%> <br/>
+    </div>
+
+    <div class="form-group"
+        <%= f.label :title%> <br/>
+        <%= f.text_field :title, class: "form-control" %> <br/>
+    </div>
+
+    <div class="form-group"
+        <%= f.label :description%> <br/>
+        <%= f.text_area :description, :rows => 5, class: "form-control" %> <br/>
+    </div>
+
     <br/>
-    <br/>
   
-    <%= f.submit %>
-  
+    <%= f.submit "Ask Question", class: 'btn btn-success' %>
+ 
 <% end %>
+ 
