--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Ask a new question</h1>
+<div class="col-md-10 col-md-offset-1">
+
+<h2>Ask a new question</h2>
 
 <%= render 'form' %>
 
-
+</div>
