--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,12 @@
             <li><%= link_to "Log Out", logout_path, method: :delete, class: 'navlink' %> </li>
           </ul>
         <% end %>
-
-
       </div>
       
     </nav>
+     <% if logged_in? %>
+      <div class="container"> Welcome, <%= current_user.username %>! </div>
+     <% end %>
 
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: "alert alert-info" %>
