--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Edit this question</h1>
+<div class="col-md-10 col-md-offset-1">
 
-<%= render 'form' %>
+    <h1>Edit this question</h1>
+
+    <%= render 'form' %>
+
+</div>
