--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,17 @@
 <div class="col-md-10 col-md-offset-1">
     <h2>Questions</h2>
+
+    <% if Question.created_today.any? %>
+        <ul> 
+        
+        New Today:
+        <% Question.created_today.each do |q| %>
+            <li><%= link_to q.title, question_path(q) %> by <%= q.user.username %> </li>
+        <% end %>
+         
+        </ul>
+    <% end %>
+
  
      <% if @questions %>
         <% @categories.each do |c| %>
