--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-10 col-md-offset-1">
 <p> <%= @answer.question.title %> </p>
 <p> <%= @answer.question.description %> </p>
 
@@ -14,8 +15,6 @@ Answer:
     <% end %>
 <% end %>
 
+</div>
 
-
-
-
-
+ 
