--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -2,7 +2,7 @@
  
 <%= form_for ([@question, @answer]) do |f| %>
    <%= f.label :comment  %>
-   <%= f.text_area :comment %>
+   <%= f.text_area :comment, :rows => 5, class: "form-control" %>
 
    <%= f.button :submit, :class => 'btn-custom' %>
  <% end %>
