--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,5 @@
+<div class="col-md-10 col-md-offset-1">
+
 <h3>Questions about <%= @category.name %>
 
 <h4>
@@ -9,3 +11,4 @@
 <% end %> 
 </ul>
 </h4>
+</div>
