--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,18 +1,15 @@
 <div class="col-md-10 col-md-offset-1">
-<p> <%= @answer.question.title %> </p>
-<p> <%= @answer.question.description %> </p>
 
-<p>Last updated by <%= @answer.user.username %> at <%= time_ago_in_words(@answer.updated_at) %> ago </p>
-Answer:
-<p> <%= @answer.comment %> </p>
+<p> Question: <%= @answer.question.title %> </p>
+<p> Description: <%= @answer.question.description %> </p>
 
- 
+ <%= render 'form', answer: @answer, submit_text: "Edit"%> <br/>
+
 
 <% if logged_in? %>
      <% if @answer.user_id == current_user.id %>
-        <%= link_to "Edit Answer", edit_question_answer_path(@answer.question, @answer) %>
-        <%= link_to "Delete Answer", question_answer_path(@answer.question, @answer), method: :delete, data: { confirm: "Are you sure?" } %>
-    <% end %>
+     <%= link_to "Delete", question_answer_path(@question, @answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
+     <% end %>
 <% end %>
 
 </div>
