--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -2,6 +2,7 @@
 
 <p> Question: <%= @answer.question.title %> </p>
 <p> Description: <%= @answer.question.description %> </p>
+<p> Asked by: <%= @answer.question.user.username %> <%= time_ago_in_words(@question.created_at) %> ago.</p>
 
  <%= render 'form', answer: @answer, submit_text: "Edit"%> <br/>
 
