--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,6 +1,7 @@
 <ul>
-    <% object.errors.full_messages.each do |error_message| %>
 
+    <% object.errors.full_messages.each do |error_message| %>
+        <% byebug %>
         <li><%= error_message%></li>
 
     <% end %>
