Enabled admin functions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,10 @@
       <div class="container"> Welcome, <%= current_user.username %>! </div>
      <% end %>
 
-      <% flash.each do |name, msg| %>
+     <div class="container"><% flash.each do |name, msg| %>
         <%= content_tag :div, msg, class: "alert alert-info" %>
       <% end %>
+      </div>
 
 
  
