--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Categories#index</h1>
+<div class="col-md-10 col-md-offset-1">
+
+<h3>Categories</h3>
 
 <h4>
 <ul>
@@ -6,8 +8,16 @@
  <% @categories.each do |c| %>
     
     <li><%= link_to c.name, category_path(c) %></li>
-
 <% end %> 
 </ul>
 </h4>
 
+<% if current_user.admin %>
+<div class="btn btn-info btn-xs">
+    <%= link_to "Add a new category", new_category_path, class:"btn" %>
+</div>
+
+
+<% end %> 
+
+</div>
