--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -6,7 +6,7 @@
 
     <div class="form-group">
         <%= f.label :category_id, "Category"%> <br/>
-        <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true, class: "form-control"%> <br/>
+        <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true, class: "dropdown-menu" %> <br/>
     </div>
 
     <div class="form-group">
