--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,7 +11,10 @@
 <% end %> 
 </ul>
 
-<%= render 'form', submit_text: "Edit Category"%>
+<% if current_user.admin %>
+    <%= render 'form', submit_text: "Edit Category"%>
+    <%= link_to "Delete Category", category_path(@category), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
 
+<% end %>
 
 </div>
