Partials for user's page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,17 @@
 <div class="col-md-10 col-md-offset-1">
  
 <h3> <%= current_user.username %>'s Page </h3>
+<br>
 
-<h4> Questions I asked </h4>
-<ul>
-<% @my_questions.each do |q| %>
-    <li><%= link_to q.title, question_path(q) %> </li>
-
-<% end %>
-</ul>
+<h4> Questions that I asked </h4>
+<%= render partial: 'questions/question', collection: @my_questions %>
+<br>
 
 <h4> Questions that I answered </h4>
-<ul>
- <% @my_answers.each do |a| %>
-    <li> <%= link_to a.question.title, question_path(a.question) %> </li>
-  <% end %>
-</ul>
+<%= render partial: 'answers/answered', collection: @my_answers %>
+<br>
+
+<h4> My open questions</h4>
+<%= render partial: 'questions/question', collection: @my_questions.unanswered %>
 
  </div>
