--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -3,14 +3,16 @@
 <%= answer.user.username %> answered <%= time_ago_in_words(@question.created_at) %> ago. <br/>
 <%= link_to "Details", question_answer_path(@question, answer) %> <br/>
 
+ 
+
 <!-- Do not render form_for if answer does not belong to current user, just show answer -->
-<% if answer.user_id == current_user.id %>
-<h4>Edit your answer:</h4>
-    <%= render 'answers/form', answer: answer, submit_text: "Edit" %> <br/>
-    <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
-    
-<% else %>
-    <%= answer.comment %> <br/> <br/>
-<% end %>
+    <% if logged_in? && answer.user_id == current_user.id %>
+        <h4>Edit your answer:</h4>
+            <%= render 'answers/form', answer: answer, submit_text: "Edit" %> <br/>
+            <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
+        
+    <% end %>
+         <%= answer.comment %> <br/> <br/>
+ 
 
 </div>
