--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,7 +12,7 @@
 </ul>
  
 
-<% if current_user.admin %>
+<% if logged_in? && current_user.admin %>
 <div class="btn btn-info btn-xs">
     <%= link_to "Add a new category", new_category_path, class:"btn" %>
 </div>
