added has_many through associations

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,4 +1,5 @@
   <%= form_for ([@question, answer]) do |f| %>
+    <%= render partial: 'layouts/errors', locals: {object: answer} %>
 
     <div class="form-group">
         <%= f.label :comment  %>
