--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,6 +1,6 @@
 <div class="well">
 
-<%= answer.user.username %> answered <%= time_ago_in_words(@question.created_at) %> ago. <br/>
+<%= answer.user.username %> answered <%= time_ago_in_words(@question.created_at) %>. <br/>
 <%= link_to "Details", question_answer_path(@question, answer) %> <br/>
 
  
@@ -11,8 +11,10 @@
             <%= render 'answers/form', answer: answer, submit_text: "Edit" %> <br/>
             <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
         
+    <% else %>
+           <%= answer.comment %> <br/> <br/>
+
     <% end %>
-         <%= answer.comment %> <br/> <br/>
  
 
 </div>
