--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,16 +1,8 @@
 <div class="col-md-10 col-md-offset-1">
 
 <h3>Categories</h3>
+<%= render partial: 'category', collection: @categories %>
 
- 
-<ul>
-
- <% @categories.each do |c| %>
-    
-    <li><%= link_to c.name, category_path(c) %></li>
-<% end %> 
-</ul>
- 
 
 <% if logged_in? && current_user.admin %>
 <div class="btn btn-info btn-xs">
