--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,14 @@
 <h3> <%= current_user.username %>'s Page </h3>
 <br>
 
+<h4> My questions by category </h4>
+<%= render @categories %>
+
+<!--
 <h4> Questions that I asked </h4>
 <%= render partial: 'questions/question', collection: @my_questions %>
 <br>
+-->
 
 <h4> Questions that I answered </h4>
 <%= render partial: 'answers/answered', collection: @my_answers %>
@@ -13,5 +18,8 @@
 
 <h4> My open questions</h4>
 <%= render partial: 'questions/question', collection: @my_questions.unanswered %>
+<br>
 
+
+ 
  </div>
