--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -1,19 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
     <h2>Questions</h2>
 
-     
-    <% if @questions_today.any? %>
-        <h4>New today </h4>
-        <%= render partial: 'questions/question', collection: @questions_today %>
-    <% end %>
-
-
-    <% if @questions_unanswered.any? %>
-        <h4>Unanswered questions </h4>
-        <%= render partial: 'questions/question', collection: @questions_unanswered %>
-    <% end %>  
-
-
      <% if @questions.any? %>
      <h4>All questions </h4>
 
@@ -22,7 +9,7 @@
             <ul>
                 <% if c.questions.any? %>
                     <% c.questions.order('updated_at DESC').each do |q| %>
-                        <li><%= link_to q.title, question_path(q) %>    </li>  
+                        <li><%= link_to q.title, admin_question_path(q) %>    </li>  
                     <% end %>
 
                 <% else %> 
@@ -35,7 +22,4 @@
  
 
 </div>
-
-
-
 
