--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,22 @@
         </div>
 
           <ul class = "nav navbar-nav navbar-right">
-            <li><%= link_to "All Questions", questions_path, class: 'navlink' %> </li>
-            <li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li>
-            <% if logged_in? %>
-            <li><%= link_to "My Stuff", user_path(current_user), class: 'navlink' %> </li>
-            <li><%= link_to "Ask Question", new_question_path, class: 'navlink' %> </li>
-            <li><%= link_to "Log Out", logout_path, method: :delete, class: 'navlink' %> </li>
+
+            <% if logged_in? && current_user.admin? %>
+                <li><%= link_to "Admin Panel", admin_root_path %></li>
+            <% end %>
+
+              <li><%= link_to "All Questions", questions_path, class: 'navlink' %> </li>
+              <li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li>
+              
+              <% if logged_in? %>
+                <li><%= link_to "My Stuff", user_path(current_user), class: 'navlink' %> </li>
+                <li><%= link_to "Ask Question", new_question_path, class: 'navlink' %> </li>
+                <li><%= link_to "Log Out", logout_path, method: :delete, class: 'navlink' %> </li>
+              <% end %>
+ 
           </ul>
-        <% end %>
+         
       </div>
       
     </nav>
