--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,3 +1,3 @@
 <li> 
-    <%= link_to question.title, question_path(question) %> - <%= question.user.username %>
+ <%= link_to question.title, question_path(question) %>  
 </li> 
