--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -19,6 +19,12 @@
         <%= f.text_area :description, :rows => 5, class: "form-control" %> <br/>
     </div>
 
+    <div class="form-group">
+        <%= f.label :tags%> <br/>
+        <%= f.text_area :tag_list, placeholder: "Enter tags separated by a comma", class: "form-control" %> <br/>
+    </div>  
+ 
+
     <br/>
   
     <%= f.submit "Ask Question", class: 'btn btn-success' %>
