--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,1 +1,6 @@
-<h1><%= @tag.name %>  </h1>
+<div class="col-md-10 col-md-offset-1">
+<h4>Tag:<%= @tag.name %>  </h4>
+
+<%= render partial: 'questions/question', collection: @tag.questions %>
+
+</div>
