--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,12 @@
 <div class="col-md-10 col-md-offset-1">
+ 
+  <%= form_tag(search_path, method: :get) do %>
+    Tag <%= text_field_tag :name %>
+    <%= submit_tag 'Search' %>
+  <% end %>
+
+    <br/>
+    <br/>
 
     <h2>Questions</h2>
 
