--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,20 +1,24 @@
 <div class="col-md-10 col-md-offset-1">
-<div class="well">
+<!-- questions/question_id/answers/id -->
 
-<p> Asked by: <%= @answer.question.user.username %> <%= display_datetime(@question.created_at) %></p>
-<p> Question: <%= @answer.question.title %> </p>
-<p> Description: <%= @answer.question.description %> </p>
- 
-<% if logged_in? && @answer.user_id == current_user.id  %>
-    <%= render 'form', answer: @answer, submit_text: "Edit"%> <br/>
-    <%= link_to "Delete", question_answer_path(@question, @answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
+    <div class="well">
 
-<% end %>
-<br>
-<p> Answered by: <%= @answer.user.username %> <%= display_datetime(@answer.created_at) %></p>
-<%= @answer.comment %>
+    <p> Asked by: <%= @answer.question.user.username %> <%= display_datetime(@question.created_at) %></p>
+    <p> Question: <%= @answer.question.title %> </p>
+    <p> Description: <%= @answer.question.description %> </p>
+    <br>
+    
+    <% if logged_in? && @answer.user_id == current_user.id  %>
+        <%= render 'form', answer: @answer, submit_text: "Edit Answer"%> <br/>
+        <%= link_to "Delete Answer", question_answer_path(@question, @answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
 
-</div>
+    <% else %>
+        <p> Answered by: <%= @answer.user.username %> <%= display_datetime(@answer.created_at) %></p>
+        <%= @answer.comment %>
+
+    <% end %>
+
+    </div>
 </div>
 
  
