--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -9,7 +9,7 @@
 <h4>Description: </h4>
 <p> <%= @question.description %> </p>
 
-<% if logged_in? && @question.user_id == current_user.id %>
+<!-- Allow admin to edit and delete question <#% if logged_in? && @question.user_id == current_user.id %> -->
 
    <div class="btn btn-info btn-xs">
        <%= link_to "Edit Question", edit_question_path(@question), class:"btn" %>
@@ -18,7 +18,7 @@
    <div class="btn btn-warning btn-xs">
        <%= link_to "Delete Question", question_path(@question), class:"btn", method: :delete, data: { confirm: "Are you sure?" } %>
    </div>
-<% end %>
+<!-- <#% end %> -->
 
 </div>
 
