--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -12,6 +12,12 @@
         <%= f.email_field :email, class: "form-control" %> <br/>
     </div>
 
+    <div class="form-group">
+        <%= f.label :admin%> <br/>
+        <%= f.check_box :admin, class: "form-control" %> <br/>
+    </div>
+
+
     <br/>
   
     <%= f.submit submit_text, class: 'btn btn-success' %>
