--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,10 @@
 <div class="col-md-10 col-md-offset-1">
     <p>Created at: <%= display_datetime(@user.created_at) %> </p>
-    <%= render 'form', submit_text: "Edit User"%>
+    <p>Name: <%= @user.username %> </p>
+    <p>Email: <%= @user.email %> </p>
+    <p>Admin: <%= @user.admin %> </p>
+
+     <%= link_to "Edit User", edit_admin_user_path(@user), class: "btn btn-info"  %>
     <%= link_to "Delete User", admin_user_path(@user), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
 
 </div>
