--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -7,10 +7,13 @@
 
 <!-- Do not render form_for if answer does not belong to current user, just show answer -->
     <% if logged_in? && answer.user_id == current_user.id %>
-        <h4>Edit your answer:</h4>
-            <%= render 'answers/form', answer: answer, submit_text: "Edit" %> <br/>
-            <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning" , method: :delete, data: { confirm: "Are you sure?" } %>
-        
+        <h4>Your answer:</h4>
+            <%= answer.comment %> 
+            <br/>
+            <br/>
+            <%= link_to "Edit", edit_question_answer_path(@question, answer), class: "btn btn-default" %>
+            <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning", method: :delete, data: { confirm: "Are you sure?" } %>
+
     <% else %>
  
            <%= answer.comment %> <br/> <br/>
