--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,9 +1,5 @@
-<h4>Edit this comment: </h4>
+<div class="col-md-10 col-md-offset-1">
  
-<%= form_for ([@question, @answer]) do |f| %>
-   <%= f.label :comment  %>
-   <%= f.text_area :comment, :rows => 5, class: "form-control" %>
+ <%= render 'form', answer: @answer, submit_text: "Edit Answer"%> <br/>
 
-   <%= f.button :submit, :class => 'btn-custom' %>
- <% end %>
-
+ </div> 
