--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,8 +1,11 @@
 <div class="col-md-10 col-md-offset-1">
  
   <%= form_tag(search_path, method: :get) do %>
-    Tag <%= text_field_tag :name %>
-    <%= submit_tag 'Search' %>
+    <div class="form-group">
+        Tag <%= text_field_tag :name %>
+        <%= submit_tag 'Search', class: 'btn btn-success' %>
+    </div>
+
   <% end %>
 
     <br/>
