--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,10 +5,10 @@
 
 <h4> My questions by category </h4>
 <%= render @categories %>
+<br>
 
 <h4> Questions that I answered </h4>
-<%= render partial: 'answers/answered', collection: @my_answers %>
- 
+<%= render partial: 'questions/answered', collection: @my_answers %>
 <br>
 
 <h4> My open questions</h4>
