--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,23 +1,15 @@
 <div class="well">
 
-<%= answer.user.username %> answered <%= time_ago_in_words(@question.created_at) %>. <br/>
+<%= answer.user.username %> answered <%= time_ago_in_words(answer.created_at) %> ago. <br/>
 <%= link_to "Details", question_answer_path(@question, answer) %> <br/>
 
  
-
-<!-- Do not render form_for if answer does not belong to current user, just show answer -->
-    <% if logged_in? && answer.user_id == current_user.id %>
-        <h4>Your answer:</h4>
-            <%= answer.comment %> 
-            <br/>
-            <br/>
+    <%= answer.comment %> 
+    <br/>
+    <br/>
+    <% if logged_in? && answer.user_id == current_user.id %> 
             <%= link_to "Edit", edit_question_answer_path(@question, answer), class: "btn btn-default" %>
-            <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning", method: :delete, data: { confirm: "Are you sure?" } %>
-
-    <% else %>
- 
-           <%= answer.comment %> <br/> <br/>
-
+            <%= link_to "Delete", question_answer_path(@question, answer), class: "btn btn-warning", method: :delete, data: { confirm: "Are you sure?" } %> 
     <% end %>
  
 
