--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <% end %>
 
               <li><%= link_to "All Questions", questions_path, class: 'navlink' %> </li>
-              <li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li>
+              <!--<li><%= link_to "All Categories", categories_path, class: 'navlink' %> </li> -->
               
               <% if logged_in? %>
                 <li><%= link_to "My Stuff", user_path(current_user), class: 'navlink' %> </li>
@@ -48,8 +48,15 @@
       <% end %>
       </div>
 
+      
+      <div class="row">
+      <%= form_tag(search_path, method: :get) do %>
+        <div class="form-group text-center">
+            Tag <%= text_field_tag :name %>
+            <%= submit_tag 'Search', class: 'btn btn-info' %>
+        </div>
+      <% end %>
 
- 
 
     <%= yield %>
 
