--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,40 +1,48 @@
 <div class="col-md-10 col-md-offset-1">
- 
-  <%= form_tag(search_path, method: :get) do %>
-    <div class="form-group">
-        Tag <%= text_field_tag :name %>
-        <%= submit_tag 'Search', class: 'btn btn-success' %>
+
+
+
+      <div class="col-sm-3 pull-right">
+        <div class="sidebar">
+          <ul class="nav nav-pills nav-stacked">
+            <li><% @categories.each do |c| %></li>
+            <li><%= link_to c.name.upcase, category_path(c) %></li>
+            <% end %>
+          </ul>
+      </div>
     </div>
 
-  <% end %>
-
-    <br/>
-    <br/>
-
-    <h2>Questions</h2>
-
-     
-    <% if @questions_today.any? %>
+     <h2>Questions</h2>
+ 
+     <% if @questions_today.any? %>
         <h4>New today </h4>
         <%= render partial: 'question', collection: @questions_today %>
+    <% end %> 
+    <br/>
+            
+    <% if @questions_most_popular.any? %>
+        <h4>Most answered questions </h4>
+        <%= render partial: 'question', collection: @questions_most_popular %>
     <% end %>
-
+    <br/>
 
     <% if @questions_unanswered.any? %>
         <h4>Unanswered questions </h4>
         <%= render partial: 'question', collection: @questions_unanswered %>
     <% end %>  
+    <br/>
 
 
-     <% if @questions.any? %>
+     <% if @questions.order_newest.any? %>
      <h4>All questions </h4>
-        <%= render partial: 'question', collection: @questions %>
+        <%= render partial: 'question', collection: @questions.order_newest %>
     <% end %>
+    <br/>
 
- 
 
 </div>
 
 
 
+   
 
