--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,16 +10,17 @@
         <h4>Description: </h4>
         <p> <%= @question.description %> </p>
 
-        <h4>Tags: </h4> 
-        <!-- Iterate through all tags that belong to @question in _tag.html.erb -->
-        <%= render @question.tags %>
+        <% if @question.tags %>
+            <!-- Render a loop of all tags that belong to @question in _tag.html.erb -->
+            <h4>Tags: </h4> 
+            <%= render @question.tags %>
+        <% end %>
 
-            <br/>
-            <br/>
+        <br/>
+        <br/>
 
-        <!-- Only the user who created the quesiton can edit/delete it -->
+        <!-- Only the user who created the question can edit/delete it -->
         <% if logged_in? && @question.user_id == current_user.id %>
-        
             <div class="btn btn-info btn-xs">
                 <%= link_to "Edit Question", edit_question_path(@question), class:"btn" %>
             </div>
@@ -29,20 +30,37 @@
             </div>
          <% end %>
 
+         <p><%= @question.likes.count %> <%= (@question.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+ 
+
+        <!-- Check if current_user has alrady liked this question -->
+        <% user_has_liked = @question.likes.find { |like| like.user_id == current_user.id} %>
+         
+        <% if user_has_liked %>
+            <%= button_to 'Unlike', question_like_path(@question, user_has_liked), method: :delete %> 
+            <strong>You liked this!</strong>
+        <% else %>
+            <%= button_to 'Like', question_likes_path(@question), method: :post %>
+        <% end %>
+
     </div>
  
-    <!-- Add answers to the question --> 
+
+
+
+    <!-- Show all answers to the question --> 
     <% if @question.answers.any? %>
-        <!-- Iterate through answers that belong to @question using answers/_answer.html -->
+        <%= link_to "See answers#index", question_answers_path(@question) %>
+        <!-- Render a loop of all answers that belong to @question using answers/_answer.html -->
         <%= render @question.answers %>
     <% end %>
+
+
+
 
     <% if logged_in? %>
         <h4>Add your answer:</h4>
         <%= render partial: 'answers/form', locals: {answer: @question.answers.build , submit_text: "Add Answer"} %>
- 
     <% end %>
-
-
 
 </div>
