--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/3009bbfc69.js"></script>
+
+
   </head>
 
   <body>
@@ -53,7 +59,7 @@
       <%= form_tag(search_path, method: :get) do %>
         <div class="form-group text-center">
             Tag <%= text_field_tag :name %>
-            <%= submit_tag 'Search', class: 'btn btn-info' %>
+            <button type="submit"><i class="fa fa-search", style="color:green"></i></button>
         </div>
       <% end %>
 
