--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -30,18 +30,10 @@
             </div>
          <% end %>
 
-         <p><%= @question.likes.count %> <%= (@question.likes.count) == 1 ? 'Like' : 'Likes'%></p>
+         <br/>
+         <%= render 'likes/like'%>
  
-
-        <!-- Check if current_user has alrady liked this question -->
-        <% user_has_liked = @question.likes.find { |like| like.user_id == current_user.id} %>
-         
-        <% if user_has_liked %>
-            <%= button_to 'Unlike', question_like_path(@question, user_has_liked), method: :delete %> 
-            <strong>You liked this!</strong>
-        <% else %>
-            <%= button_to 'Like', question_likes_path(@question), method: :post %>
-        <% end %>
+ 
 
     </div>
  
